plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'sign.language'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// 기존의 기본 스타터를 web 스타터로 변경
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// DB 암호화 모듈
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	// JWT (JSON Web Token) 라이브러리 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// 롬복 설정 (이대로 유지)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트 라이브러리 (이대로 유지)
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	// 검증 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security' // 로그인 인증
	implementation 'org.springframework.security:spring-security-crypto' // DB 암호화

	// Spring Data Redis(for token)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Spring Cloud AWS S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.2.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
